# pointer

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
e2e/: debug-and-context.spec.ts  debugger-polyglot-visual.spec.ts  editor-polyglot-corpus.spec.ts  file-tree-and-assistant.spec.ts  inline-git-diff.spec.ts  languages-intellisense.spec.ts  outline.spec.ts  repo-standards.spec.ts  sidebar-layout.spec.ts  workbench-interactions.spec.ts
e2e/fixtures/: pointerApp.ts
scripts/: gen-icons.mjs
scripts/quality/: README.md  evalAgent.mjs  evalChat.mjs  evalFim.mjs  evalInline.mjs  gitCommitPipelineProbe.mjs  lib.mjs  manual-smoke-unified-assistant.md  pointerTerminal.mjs  probeAssistantFlows.mjs  probeExpressRepo.mjs  probeTauriMarkdownRepo.mjs  run.mjs  themeMeteorProbe.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: agent_estimator.txt  agent_system.txt
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/commands/: agent.rs  agent_changes.rs  app_icon.rs  app_state.rs  assistant.rs  context.rs  diagnostics.rs  fast_apply.rs  files.rs  format.rs  fs.rs  git.rs  inference.rs  lsp.rs  mcp.rs  mod.rs  models.rs  ollama.rs  system.rs  terminal.rs  workspace.rs
src-tauri/src/services/: context_lifecycle.rs  history.rs  indexer.rs  inference.rs  lsp.rs  mcp.rs  merkle.rs  mod.rs  opencode.rs  prompt.rs  skills.rs  workspace_filter.rs
src-tauri/tests/: mcp_integration.rs
src/components/: AIPanel.tsx  BookmarksPicker.tsx  BrandLogo.test.tsx  BrandLogo.tsx  Breadcrumbs.tsx  CommandPalette.tsx  Confirm.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DiffOverlay.tsx  DiffView.tsx  Editor.providers.test.ts  Editor.tsx  FileFinder.tsx  FileTree.tsx  FindInFiles.tsx  InlineEdit.test.tsx  InlineEdit.tsx  LanguagePicker.tsx  LspIdleManager.tsx  MarkdownView.tsx  Marketplace.test.tsx  Marketplace.tsx  ModelActivityPanel.test.tsx  ModelActivityPanel.tsx  NotificationCenter.tsx  OpenRecentPicker.tsx  Outline.test.tsx  Outline.tsx  Popover.test.tsx  Popover.tsx  Preview.tsx  RefactorSuggestion.test.tsx  RefactorSuggestion.tsx  RightDock.tsx  SecretPrompt.tsx  SettingsPage.tsx  ShortcutsHelp.tsx  StatusBar.tsx  Switch.test.tsx  (+9 more)
src/lib/: actions.test.ts  actions.ts  aiStageDecorations.test.ts  aiStageDecorations.ts  applyRename.test.ts  applyRename.ts  assistantDisplay.test.ts  assistantDisplay.ts  assistantPlans.test.ts  assistantPlans.ts  bookmarkDecorations.ts  brandLogo.ts  breakpointDecorations.ts  buildContext.test.ts  diff.test.ts  (+84 more)
(+64 files in other folders)
