[package]
name = "pointer"
version = "0.1.0"
description = "Pointer — an AI-first code editor powered by local open-source models."
authors = ["Pointer"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pointer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"

notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
ignore = "0.4"
walkdir = "2"
globset = "0.4"

once_cell = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
# Snapshot IDs for the agent change journal. v4 random UUIDs are
# enough — we never need to reverse them, just guarantee uniqueness
# across an unbounded run history.
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.32"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }

# File ingestion. We deliberately stick to pure-Rust crates so the build stays
# portable. pptx/docx are *not* supported in this pass — they need a full
# zip+xml parser to be useful and we'd rather error clearly than mis-extract.
base64 = "0.22"
mime_guess = "2"
calamine = "0.26"
csv = "1"
pdf-extract = "0.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }

# Integrated terminal — real PTY so curses apps, ANSI cursor movement, and
# shell prompts (zsh, fish, powershell) all work. We chose `portable-pty`
# because it abstracts the Unix forkpty + Windows ConPTY differences and
# is a sibling crate of wezterm (battle-tested in the wild).
portable-pty = "0.8"
regex = "1.12.3"
tauri-plugin-window-state = { version = "2", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
